skills & fix active link

--- a/index.html
+++ b/index.html
@@ -159,20 +159,43 @@
     <div class="section about" id="about">
         <div class="container">
             <div class="about_inner">
-                <div class="left wow fadeInLeft">
+                <div class="left">
                     <img src="/assets/about_me_2.jpeg" alt="about_me_img" class="about_me_img" />
                 </div>
 
-                <div class="right wow fadeInLeft">
+                <div class="right">
                     <div class="abe_title">
                         <h3>A propos de <span>moi</span></h3>
                     </div>
                     <div class="text">
                         <p>
-                            Fort de plusieurs années d'expérience dans le développement web
+                            Entrepreneur et développeur fullstack, je fournis des solutions complètes pour vos projets
+                            web et mobiles, de la conception initiale jusqu'à la mise en production. Mon approche
+                            intègre tous les aspects du développement pour garantir des produits finaux performants et
+                            adaptés à vos besoins spécifiques.
+                            <br>
+                            <br>
+                            Actuellement en freelance, je serais très heureux de discuter avec vous de vos projets ou de
+                            belles opportunités professionnelles.
+
+                            <!--  Développeur web et mobile freelance, spécialisé dans la conception de solutions numériques
+                            innovantes. Mon expertise s'étend des technologies front-end aux back-end, en mettant
+                            toujours l'accent sur une expérience utilisateur optimale. Collaborons pour transformer vos
+                            idées en réalités numériques efficaces et attractives. -->
+
+                            <!-- Développeur web et mobile freelance avec plus de 3 ans d'expérience, je spécialise dans
+                            la création de solutions digitales sur mesure. 
+                            <br>
+                            Ma maîtrise des technologies Flutter,
+                            Symfony, WordPress, ainsi que des langages HTML, CSS, JavaScript et PHP, me permet de
+                            développer des applications et sites web qui non seulement répondent aux attentes des
+                            utilisateurs mais les dépassent. Collaborons pour transformer vos idées en projets
+                            numériques innovants et performants. -->
+
+
+                            <!-- Fort de plusieurs années d'expérience dans le développement web
                             et mobile, je suis passionné par la création de solutions
                             numériques qui améliorent l'expérience utilisateur.
-
                             <br>
                             Spécialiste
                             en développement front-end et back-end, je maîtrise diverses
@@ -181,7 +204,7 @@
                             applications mobiles. Je m'engage à fournir des applications
                             performantes et esthétiques, en veillant à optimiser chaque
                             aspect de l'expérience utilisateur pour répondre aux besoins
-                            spécifiques de mes clients.
+                            spécifiques de mes clients. -->
                         </p>
                     </div>
                     <a href="#contact" class="action_btn magic-hover">Contactez moi</a>
@@ -190,76 +213,61 @@
         </div>
     </div>
 
-    <!-- <div class="container section" id="skills">
-        <div class="skills_title">
-            <h3>Mes compténces</h3>
-        </div>
-        <div class="skills">
-            <div class="skill_card">
-                <div class="skill_card_content">
-                    <img class="icon_img" src="assets/flutter_icon.png" alt="">
-                    <h3>Flutter</h3>
-                    <p>Expert en Flutter pour le développement rapide d'applications mobiles cross-platform. Utilisé
-                        pour
-                        créer
-                        des interfaces utilisateur fluides et réactives, adaptées à la fois pour iOS et Android.</p>
+    <div class="section skills" id="skills">
+        <div class="container">
+            <div class="skills_inner">
+                <div class="abe_title">
+                    <h3>Mes <span>compétences</span> en développement</h3>
                 </div>
-                <div class="skill_card_bottom">
-                    <span class="badge">Expert</span>
-                </div>
-            </div>
+                <div class="skills_content">
+                    <div class="skills_item">
+                        <div class="skills_item_title">
+                            <p>HTML - CSS - JS - PHP</p>
+                            <p class="skills_item_progress_value">90%</p>
+                        </div>
+                        <div class="skills_item_progress">
+                            <div class="skills_item_progress_inner" style="width: 90%">
+                                <span></span>
+                            </div>
+                        </div>
+                        <div class="skills_item_subtitle">
+                            Connaissance des basiques en développement web
+                        </div>
+                    </div>
+                    <div class="skills_item">
+                        <div class="skills_item_title">
+                            <p>Symfony - Node Js - WordPress</p>
+                            <p class="skills_item_progress_value">80%</p>
+                        </div>
+                        <div class="skills_item_progress">
+                            <div class="skills_item_progress_inner" style="width: 80%">
+                                <span></span>
+                            </div>
+                        </div>
+                        <div class="skills_item_subtitle">
+                            Expérience avec les Frameworks et CMS
+                        </div>
+                    </div>
 
-            <div class="skill_card">
-                <div class="skill_card_content">
-                    <i class="fab fa-php fa-2x"></i>
-                    <h3>Symfony</h3>
-                    <p>Utilisation avancée de Symfony pour développer des applications web robustes, sécurisées et
-                        évolutives, avec une forte emphase sur la réutilisabilité des composants.</p>
-                </div>
-                <div class="skill_card_bottom">
-                    <span class="badge">Avancé</span>
-                </div>
-            </div>
+                    <div class="skills_item">
+                        <div class="skills_item_title">
+                            <p>Flutter</p>
+                            <p class="skills_item_progress_value">80%</p>
+                        </div>
+                        <div class="skills_item_progress">
+                            <div class="skills_item_progress_inner" style="width: 80%">
+                                <span></span>
+                            </div>
+                        </div>
+                        <div class="skills_item_subtitle">
+                            Développement d'applications mobiles cross-platform
+                        </div>
+                    </div>
 
-            <div class="skill_card">
-                <div class="skill_card_content">
-                    <i class="fab fa-node-js fa-2x"></i>
-                    <h3>Node.js</h3>
-                    <p>Conception de services back-end avec Node.js pour des applications nécessitant de hautes
-                        performances
-                        en
-                        temps réel et une grande scalabilité.</p>
-                </div>
-                <div class="skill_card_bottom">
-                    <span class="badge">Intermédiaire</span>
-                </div>
-            </div>
-
-            <div class="skill_card">
-                <div class="skill_card_content">
-                    <i class="fas fa-database fa-2x"></i>
-                    <h3>MySQL & MongoDB</h3>
-                    <p>Expertise en bases de données relationnelles et NoSQL.</p>
-                </div>
-                <div class="skill_card_bottom">
-                    <span class="badge">Expert</span>
-                </div>
-            </div>
-
-            <div class="skill_card">
-                <div class="skill_card_content">
-                    <i class="fas fa-cogs fa-2x"></i>
-                    <h3>CI/CD & GitHub Actions</h3>
-                    <p>Utilisation de techniques de CI/CD avec GitHub Actions pour automatiser les tests et les
-                        déploiements,
-                        augmentant la productivité et la fiabilité des applications.</p>
-                </div>
-                <div class="skill_card_bottom">
-                    <span class="badge">Avancé</span>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <div class="available">
         <div class="container">
@@ -326,17 +334,6 @@
             </span>
         </div>
     </footer>
-
-    <!-- <div class="mouse-cursor cursor-outer" style="visibility: visible; transform: translate(847px, 35px)"></div>
-    <div class="mouse-cursor cursor-inner" style="visibility: visible; transform: translate(847px, 35px)"></div> -->
-
-    <!-- <div class="mouse-cursor cursor-outer"></div>
-    <div class="mouse-cursor cursor-inner"></div> -->
-
-    <!-- <div class="progressbar">
-        <a href="#"><span class="text">To Top</span></a>
-        <span class="line"></span>
-    </div> -->
 
     <div class="progress-wrap magic-hover">
         <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
