personnalisation de portfolio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
 
-    <title>Freelancer - CV and Portfolio Template</title>
+    <title>Concepteur développeur d'applications Portfolio </title>
     <meta name="description" content />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -41,7 +41,7 @@
                 </li>
 
                 <li class="nav_item">
-                    <a href="#work" class="nav_link">
+                    <a href="#portfolio" class="nav_link">
                         <i class="bx bx-briefcase-alt-2"></i>
                     </a>
                 </li>
@@ -64,10 +64,14 @@
                             <span class="character opened">A</span>
                             <span class="character opened">b</span>
                             <span class="character opened">d</span>
+                            <span class="character opened">u</span>
+                            <span class="character opened">r</span>
                             <span class="character opened">a</span>
-                            <span class="character opened">l</span>
-                            <span class="character opened">l</span>
+                            <span class="character opened">k</span>
+                            <span class="character opened">h</span>
+                            <span class="character opened">m</span>
                             <span class="character opened">a</span>
+                            <span class="character opened">n</span>
                         </span>
                     </h3>
                     <h3 class="fn_animation name ready">
@@ -132,14 +136,14 @@
                     </span>
                 </div>
                 <div class="action_section">
-                    <a href="assets/cv.pdf" download class="action_outline_btn magic-hover">Télécharger CV</a>
+                    <a href="assets/Abdurakhman Bersanukaev.pdf" download class="action_outline_btn magic-hover">Télécharger CV</a>
                     <a href="#about" class="action_btn magic-hover">A propos de moi</a>
                 </div>
             </div>
         </div>
         <div class="social_network">
             <div class="social_network_item magic-hover">
-                <a href="" class="social_network_link" target="_blank">
+                <a href="www.linkedin.com/in/abdurakhman-bersanukaev-6749b1175" class="social_network_link" target="_blank">
                     <i class="bx bxl-linkedin"></i>
                 </a>
             </div>
@@ -164,47 +168,24 @@
                 </div>
 
                 <div class="right">
-                    <div class="abe_title">
+                    <div class="titre">
                         <h3>A propos de <span>moi</span></h3>
                     </div>
                     <div class="text">
                         <p>
-                            Entrepreneur et développeur fullstack, je fournis des solutions complètes pour vos projets
-                            web et mobiles, de la conception initiale jusqu'à la mise en production. Mon approche
-                            intègre tous les aspects du développement pour garantir des produits finaux performants et
-                            adaptés à vos besoins spécifiques.
-                            <br>
-                            <br>
-                            Actuellement en freelance, je serais très heureux de discuter avec vous de vos projets ou de
-                            belles opportunités professionnelles.
-
-                            <!--  Développeur web et mobile freelance, spécialisé dans la conception de solutions numériques
-                            innovantes. Mon expertise s'étend des technologies front-end aux back-end, en mettant
-                            toujours l'accent sur une expérience utilisateur optimale. Collaborons pour transformer vos
-                            idées en réalités numériques efficaces et attractives. -->
-
-                            <!-- Développeur web et mobile freelance avec plus de 3 ans d'expérience, je spécialise dans
-                            la création de solutions digitales sur mesure. 
-                            <br>
-                            Ma maîtrise des technologies Flutter,
-                            Symfony, WordPress, ainsi que des langages HTML, CSS, JavaScript et PHP, me permet de
-                            développer des applications et sites web qui non seulement répondent aux attentes des
-                            utilisateurs mais les dépassent. Collaborons pour transformer vos idées en projets
-                            numériques innovants et performants. -->
-
-
-                            <!-- Fort de plusieurs années d'expérience dans le développement web
-                            et mobile, je suis passionné par la création de solutions
-                            numériques qui améliorent l'expérience utilisateur.
-                            <br>
-                            Spécialiste
-                            en développement front-end et back-end, je maîtrise diverses
-                            technologies telles que HTML, CSS, JavaScript, ainsi que des
-                            frameworks comme Symfony pour le web et <span class="word_flutter">Flutter</span> pour les
-                            applications mobiles. Je m'engage à fournir des applications
-                            performantes et esthétiques, en veillant à optimiser chaque
-                            aspect de l'expérience utilisateur pour répondre aux besoins
-                            spécifiques de mes clients. -->
+                            Passionné par le développement web et mobile, j’aime concevoir des applications intuitives et performantes qui répondent aux besoins des utilisateurs. 
+                            Fort de 
+                            <span class="experience">2</span> 
+                            années d'expérience chez Midrange GROUP, j’ai travaillé sur plusieurs projets, notamment l’application Mon Carnet, un carnet d’entretien 
+                            digital pour véhicules, et Accesclub, un site e-commerce proposant des produits spécifiques dans un contexte particulier.
+                            Mon expertise couvre le développement mobile (Flutter) et web (React, Laravel), ainsi que l’expérience utilisateur et le design d’interfaces. 
+                            Toujours à l’affût des nouvelles technologies, j’aime relever des défis techniques et collaborer avec des équipes dynamiques pour créer des solutions 
+                            innovantes.
+                            <br />
+                            <br />
+                            Aujourd’hui, je suis à la recherche d’une nouvelle opportunité en développement mobile ou web, où je pourrai mettre à profit mon expertise et continuer 
+                            à évoluer dans un environnement stimulant.
+                            Si mon profil vous intéresse, n’hésitez pas à me contacter ! 🚀
                         </p>
                     </div>
                     <a href="#contact" class="action_btn magic-hover">Contactez moi</a>
@@ -216,17 +197,17 @@
     <div class="section skills" id="skills">
         <div class="container">
             <div class="skills_inner">
-                <div class="abe_title">
+                <div class="titre">
                     <h3>Mes <span>compétences</span> en développement</h3>
                 </div>
                 <div class="skills_content">
                     <div class="skills_item">
                         <div class="skills_item_title">
-                            <p>HTML - CSS - JS - PHP</p>
-                            <p class="skills_item_progress_value">90%</p>
+                            <p>HTML - CSS - JS </p>
+                            <p class="skills_item_progress_value">80%</p>
                         </div>
                         <div class="skills_item_progress">
-                            <div class="skills_item_progress_inner" style="width: 90%">
+                            <div class="skills_item_progress_inner" style="width: 80%">
                                 <span></span>
                             </div>
                         </div>
@@ -236,11 +217,11 @@
                     </div>
                     <div class="skills_item">
                         <div class="skills_item_title">
-                            <p>Symfony - Node Js - WordPress</p>
-                            <p class="skills_item_progress_value">80%</p>
+                            <p>Symfony - Laravel - ReactJS - WordPress</p>
+                            <p class="skills_item_progress_value">70%</p>
                         </div>
                         <div class="skills_item_progress">
-                            <div class="skills_item_progress_inner" style="width: 80%">
+                            <div class="skills_item_progress_inner" style="width: 70%">
                                 <span></span>
                             </div>
                         </div>
@@ -252,10 +233,10 @@
                     <div class="skills_item">
                         <div class="skills_item_title">
                             <p>Flutter</p>
-                            <p class="skills_item_progress_value">80%</p>
+                            <p class="skills_item_progress_value">70%</p>
                         </div>
                         <div class="skills_item_progress">
-                            <div class="skills_item_progress_inner" style="width: 80%">
+                            <div class="skills_item_progress_inner" style="width: 70%">
                                 <span></span>
                             </div>
                         </div>
@@ -263,12 +244,79 @@
                             Développement d'applications mobiles cross-platform
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="section portfolio" id="portfolio">
+        <div class="container">
+            <div class="portfolio_inner">
+                <div class="titre">
+                    <h3>Mon <span>Portfolio</span></h3>
+                </div>
+                <div class="portfolio_grid">
+                    <div class="grid_item">
+                        <img src="assets/mon_carnet.PNG"
+                            alt="image alt" />
+                        <div class="grid_item_overlay">
+                            <h4>Mon Carnet</h4>
+                            <p>Application mobile - Carnet d'entretien numérique</p>
+                            <a href="" target="_blank" class="grid_item_link magic-hover">Voir le projet</a>
+                        </div>
+                    </div>
+                    <div class="grid_item"><img
+                            src="https://images.unsplash.com/photo-1611019708499-995e850160fa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+                            alt="image alt" />
+                        <div class="grid_item_overlay">
+                            <h4>Accessclub</h4>
+                            <p>Un site e-cemmerce proposant des produits spécifiques dans un contexte particulier</p>
+                            <a href="" target="_blank" class="grid_item_link magic-hover">Voir le projet</a>
+                        </div>
+                    </div>
+                    <div class="grid_item">
+                        <img src="assets/jlr_mobility_img.png"
+                            alt="image alt" />
+                        <div class="grid_item_overlay">
+                            <h4>jlrmobility</h4>
+                            <p>Application web de scan intelligent permettant d’extraire et d’injecter automatiquement des données dans un formulaire.</p>
+                            <a href="" target="_blank" class="grid_item_link magic-hover">Voir le projet</a>
+                        </div>
+                    </div>
+                    <!-- <div class="grid_item grid_item_wide"><img
+                            src="https://images.unsplash.com/photo-1500067737767-0276d2605978?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fHdpZGV8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                            alt="image alt" />
+                        <div class="grid_item_overlay">
+                            <h4>Projet 4</h4>
+                            <p>Conception d'une application mobile pour une entreprise de livraison</p>
+                            <a href="" target="_blank" class="grid_item_link magic-hover">Voir le projet</a>
+                        </div>
+                    </div>
+                    <div class="grid_item"><img
+                            src="https://images.unsplash.com/photo-1571778162397-4ae65c6d33c0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNXx8fGVufDB8fHx8&auto=format&fit=crop&w=400&q=60"
+                            alt="image alt" />
+                        <div class="grid_item_overlay">
+                            <h4>Projet 5</h4>
+                            <p>Conception d'un site web pour une entreprise de vente en ligne</p>
+                            <a href="" target="_blank" class="grid_item_link magic-hover">Voir le projet</a>
+                        </div>
+                    </div>
+                    <div class="grid_item"><img
+                            src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwyNnx8fGVufDB8fHx8&auto=format&fit=crop&w=400&q=60"
+                            alt="image alt" />
+                        <div class="grid_item_overlay">
+                            <h4>Projet 6</h4>
+                            <p>Conception d'une application mobile pour une entreprise de livraison</p>
+                            <a href="" target="_blank" class="grid_item_link magic-hover">Voir le projet</a>
+                        </div>
+                    </div> -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+<!-- 
     <div class="available">
         <div class="container">
             <div class="available_title">
@@ -285,11 +333,11 @@
                 <a href="#contact">Contactez moi</a>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="container section contact" id="contact">
-        <div class="contact_title">
-            <h3>Contactez Moi</h3>
+        <div class="titre">
+            <h3>Contactez <span>Moi</span></h3>
         </div>
         <p class="contact_sub_title">Un petit message pour en savoir plus ?</p>
         <form id="form2" method="post" action="form.php" class="contact_form">
@@ -317,7 +365,7 @@
 
     <footer>
         <div class="footer_container container">
-            <a href="#home" class="footer_title magic-hover">by Abdalla.</a>
+            <a href="#home" class="footer_title magic-hover">by Abdurakhman.</a>
 
             <ul class="footer_list">
                 <li>
@@ -330,7 +378,7 @@
             </ul>
 
             <span class="footer_copy">
-                &#169; abdalla-dev.com. All rights reserved
+                &#169; abdurakhman-dev.com. All rights reserved
             </span>
         </div>
     </footer>
