fix: update image file extensions from PNG to JPEG in portfolio section

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 </div>
                 <div class="portfolio_grid">
                     <div class="grid_item">
-                        <img src="assets/mon_carnet.PNG"
+                        <img src="assets/mon_carnet.jpeg"
                             alt="image alt" />
                         <div class="grid_item_overlay">
                             <h4>Mon Carnet</h4>
@@ -275,7 +275,7 @@
                         </div>
                     </div>
                     <div class="grid_item">
-                        <img src="assets/jlr_mobility_img.png"
+                        <img src="assets/jlr_mobility_img.jpeg"
                             alt="image alt" />
                         <div class="grid_item_overlay">
                             <h4>jlrmobility</h4>
